syntax = "proto3";

package auth.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/spazzle-io/spazzle-api/services/auth/pb";

message Session {
  string session_id = 1;
  string access_token = 2;
  string refresh_token = 3;
  google.protobuf.Timestamp access_token_expires_at = 4;
  google.protobuf.Timestamp refresh_token_expires_at = 5;
  string token_type = 6;
}
